rust/mlt-ffi/bindings/c/MltEncoderOptions.h

#ifndef MltEncoderOptions_H
#define MltEncoderOptions_H

#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#include "MltEncoderOptions.d.h"

MltEncoderOptions* MltEncoderOptions_new(void);

void MltEncoderOptions_set_tessellate(MltEncoderOptions* self, bool enabled);

void MltEncoderOptions_set_try_spatial_morton_sort(MltEncoderOptions* self, bool enabled);

void MltEncoderOptions_set_try_spatial_hilbert_sort(MltEncoderOptions* self, bool enabled);

void MltEncoderOptions_set_try_id_sort(MltEncoderOptions* self, bool enabled);

void MltEncoderOptions_set_allow_fsst(MltEncoderOptions* self, bool enabled);

void MltEncoderOptions_set_allow_fpf(MltEncoderOptions* self, bool enabled);

void MltEncoderOptions_set_allow_shared_dict(MltEncoderOptions* self, bool enabled);

void MltEncoderOptions_destroy(MltEncoderOptions* self);

#endif // MltEncoderOptions_H