rust/mlt-ffi/bindings/java/src/main/java/org/maplibre/mlt/MltFfi.java

package org.maplibre.mlt;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;

/**
 * Low-level Panama FFM bindings to the {@code mlt_ffi} native library.
 *
 * <p>All struct layouts match the C headers generated by Diplomat in
 * {@code rust/mlt-ffi/bindings/c/}.
 */
final class MltFfi {

    private MltFfi() {}

    private static final Linker LINKER = Linker.nativeLinker();
    static final SymbolLookup LIB;

    static {
        System.loadLibrary("mlt_ffi");
        LIB = SymbolLookup.loaderLookup();
    }

    // -- DiplomatU8View { const uint8_t *data; size_t len; } --

    static final StructLayout DIPLOMAT_U8_VIEW = MemoryLayout.structLayout(
            ValueLayout.ADDRESS.withName("data"),
            ValueLayout.JAVA_LONG.withName("len")   // size_t on 64-bit
    ).withName("DiplomatU8View");

    private static final long U8V_DATA_OFFSET = DIPLOMAT_U8_VIEW.byteOffset(MemoryLayout.PathElement.groupElement("data"));
    private static final long U8V_LEN_OFFSET = DIPLOMAT_U8_VIEW.byteOffset(MemoryLayout.PathElement.groupElement("len"));

    static void setU8View(MemorySegment view, MemorySegment data, long len) {
        view.set(ValueLayout.ADDRESS, U8V_DATA_OFFSET, data);
        view.set(ValueLayout.JAVA_LONG, U8V_LEN_OFFSET, len);
    }

    static MemorySegment u8ViewData(MemorySegment view) {
        return view.get(ValueLayout.ADDRESS, U8V_DATA_OFFSET);
    }

    static long u8ViewLen(MemorySegment view) {
        return view.get(ValueLayout.JAVA_LONG, U8V_LEN_OFFSET);
    }

    // -- Result { union { void *ok; int err; }; bool is_ok; } --

    static final StructLayout RESULT = MemoryLayout.structLayout(
            MemoryLayout.unionLayout(
                    ValueLayout.ADDRESS.withName("ok"),
                    ValueLayout.JAVA_INT.withName("err")
            ).withName("union"),
            ValueLayout.JAVA_BOOLEAN.withName("is_ok"),
            MemoryLayout.paddingLayout(7)
    ).withName("Result");

    private static final long RES_OK_OFFSET = RESULT.byteOffset(
            MemoryLayout.PathElement.groupElement("union"),
            MemoryLayout.PathElement.groupElement("ok"));
    private static final long RES_ERR_OFFSET = RESULT.byteOffset(
            MemoryLayout.PathElement.groupElement("union"),
            MemoryLayout.PathElement.groupElement("err"));
    private static final long RES_IS_OK_OFFSET = RESULT.byteOffset(
            MemoryLayout.PathElement.groupElement("is_ok"));

    static boolean resultIsOk(MemorySegment result) {
        return result.get(ValueLayout.JAVA_BOOLEAN, RES_IS_OK_OFFSET);
    }

    static MemorySegment resultOk(MemorySegment result) {
        return result.get(ValueLayout.ADDRESS, RES_OK_OFFSET);
    }

    static int resultErr(MemorySegment result) {
        return result.get(ValueLayout.JAVA_INT, RES_ERR_OFFSET);
    }

    // -- MltBuffer --

    static final MethodHandle MltBuffer_as_bytes = LINKER.downcallHandle(
            LIB.find("MltBuffer_as_bytes").orElseThrow(),
            FunctionDescriptor.of(DIPLOMAT_U8_VIEW, ValueLayout.ADDRESS));

    static final MethodHandle MltBuffer_len = LINKER.downcallHandle(
            LIB.find("MltBuffer_len").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

    static final MethodHandle MltBuffer_destroy = LINKER.downcallHandle(
            LIB.find("MltBuffer_destroy").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

    // -- MltEncoderOptions --

    static final MethodHandle MltEncoderOptions_new = LINKER.downcallHandle(
            LIB.find("MltEncoderOptions_new").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.ADDRESS));

    static final MethodHandle MltEncoderOptions_destroy = LINKER.downcallHandle(
            LIB.find("MltEncoderOptions_destroy").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

    static final MethodHandle MltEncoderOptions_set_tessellate = LINKER.downcallHandle(
            LIB.find("MltEncoderOptions_set_tessellate").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BOOLEAN));

    static final MethodHandle MltEncoderOptions_set_try_spatial_morton_sort = LINKER.downcallHandle(
            LIB.find("MltEncoderOptions_set_try_spatial_morton_sort").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BOOLEAN));

    static final MethodHandle MltEncoderOptions_set_try_spatial_hilbert_sort = LINKER.downcallHandle(
            LIB.find("MltEncoderOptions_set_try_spatial_hilbert_sort").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BOOLEAN));

    static final MethodHandle MltEncoderOptions_set_try_id_sort = LINKER.downcallHandle(
            LIB.find("MltEncoderOptions_set_try_id_sort").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BOOLEAN));

    static final MethodHandle MltEncoderOptions_set_allow_fsst = LINKER.downcallHandle(
            LIB.find("MltEncoderOptions_set_allow_fsst").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BOOLEAN));

    static final MethodHandle MltEncoderOptions_set_allow_fpf = LINKER.downcallHandle(
            LIB.find("MltEncoderOptions_set_allow_fpf").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BOOLEAN));

    static final MethodHandle MltEncoderOptions_set_allow_shared_dict = LINKER.downcallHandle(
            LIB.find("MltEncoderOptions_set_allow_shared_dict").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BOOLEAN));

    // -- MltConverter --

    static final MethodHandle MltConverter_mlt_to_mvt = LINKER.downcallHandle(
            LIB.find("MltConverter_mlt_to_mvt").orElseThrow(),
            FunctionDescriptor.of(RESULT, DIPLOMAT_U8_VIEW));

    static final MethodHandle MltConverter_mvt_to_mlt = LINKER.downcallHandle(
            LIB.find("MltConverter_mvt_to_mlt").orElseThrow(),
            FunctionDescriptor.of(RESULT, DIPLOMAT_U8_VIEW, ValueLayout.ADDRESS));
}
